# bear

baremetal/: CMakeLists.txt
baremetal/cmake/: arm-none-eabi.cmake  cortex_m33.cmake
baremetal/src-comm/board/clock/: board-clock.c  board-clock.h
baremetal/src-comm/board/ns16550/: board-ns16550.c  board-ns16550.h
baremetal/src-comm/board/pinmux/: board-pinmux.c  board-pinmux.h
baremetal/src-comm/board/reset/: board-reset.c  board-reset.h
baremetal/src-comm/board/stop/: board-stop.c  board-stop.h
baremetal/src-comm/common/: common.h  console.c  console.h  interrupt.h  kermit.c  platform.h  systick.c  systick.h  tiny_command.c  tiny_console.c
baremetal/src-comm/ips/ns16550/: ns16550.c  ns16550.h
baremetal/src-comm/ips/qspi-flash/: qspi-flash.c  qspi-flash.h
baremetal/src-comm/ipstest/: crypto_test_data.c  crypto_test_data.h  t-crypto-bm.c  t-crypto-bm.h  t-mbedtls.c  t-mbedtls.h  t-ns16550.c  t-ns16550.h  t-qspi-bm-flash.c  t-qspi-bm-flash.h  t-qspi-flash.c  t-qspi-flash.h
baremetal/src-ns/: bm.lds  main-ns.c
baremetal/src-ns/call_secure/: call_secure.c  call_secure.h
baremetal/src-ns/core/: startup_ARMCM33.S
baremetal/src-s/: bm.lds  main-s.c
baremetal/src-s/board/mpu/: board-mpu.h
baremetal/src-s/core/: partition_ARMCM33.h  startup_ARMCM33.S  system_ARMCM33.h
baremetal/src-s/veneers/: veneers.c  veneers.h
flash_app/: CMakeLists.txt  config.cmake
flash_app/cmake/: cortex_m33.cmake
flash_app/src-comm/board/clock/: board-clock.h
flash_app/src-comm/board/ns16550/: board-ns16550.c  board-ns16550.h
flash_app/src-comm/board/pinmux/: board-pinmux.c
flash_app/src-comm/board/stop/: board-stop.c  board-stop.h
flash_app/src-comm/cmsis/: core_cm33.h
flash_app/src-comm/common/: common.c  data-type.h  interrupt.c  tiny_command.h  tiny_console.c  tiny_console.h
flash_app/src-comm/ips/qspi-flash/: qspi-flash.c
flash_app/src-comm/ipstest/: t-ns16550.h  t-qspi-flash.c  t-qspi-flash.h
flash_app/src-s/: bm.lds  main-s.c
flash_app/src-s/board/mpu/: board-mpu.c
flash_app/src-s/core/: startup_ARMCM33.S  system_ARMCM33.c
